refactor: migrate migration from junit assertions to assertj